# openjudge

./: README.md  pyproject.toml
open_judge/: manage.py  wrapper.json
open_judge/judge/: models.py  urls.py  views.py
open_judge/judge/templates/judge/: index.html  register.html  workspace.html
open_judge/open_judge/: asgi.py  settings.py  urls.py  wsgi.py
open_judge/submissions/: 123270.py  417098.py  662235.py
