[tool.poetry]
name = "Judge"
version = "0.1.0"
description = "A online judge to check for offline contests"
authors = ["Anchal Agarwal<agarwalanchal72@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
SQLAlchemy = "^1.4.39"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]